zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__clipboard_image_top_tip.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: rendered
---
  ≡ .                       [+]                            [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                          image in clipboard · ctrl+v to paste  
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ >                                                                        │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                
  Enter send  ·  shift+tab permissions  ·  /home
