zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__input_history_search_cancelled.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 20)"
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ⏸ ask permissions on                                                                              
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ >                                                                                            │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                                    
  Enter send  ·  shift+tab permissions  ·  /home
