zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__model_favorites_pinned.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 18)"
---
  ≡ .                                                                                               
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Favorites    My gateway                                               │             
            │                                                                         │             
            │> gateway-model                                                          │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ╭─────────│                                                                         │──────────╮  
  │ > Build │  Enter to apply · Tab/Shift+Tab to switch · Esc to close                │          │  
  ╰─────────└─────────────────────────────────────────────────────────────────────────┘ic model ─╯
